--- a/_media-query.scss
+++ b/_media-query.scss
@@ -61,7 +61,6 @@
       align-items: center;
     }
     &__img {
-      border-radius: 10px;
       height: 80vh;
       width: calc(40% - 20px);
     }
@@ -72,7 +71,7 @@
       flex-direction: column;
       margin-left: 100px;
       width: 100%;
-      max-height: 60%;
+      max-height: 65%;
       font-size: 1.5rem;
       h2 {
         background-color: variables.$secondary-background;
@@ -112,6 +111,7 @@
     width: 104.5%;
     flex-direction: row-reverse;
     justify-content: space-between;
+    height: 80px;
     padding: 60px;
   }
 }
