--- a/main.css
+++ b/main.css
@@ -134,9 +134,10 @@ h6 {
   }
 }
 .content__description {
+  overflow: hidden;
+  width: 90%;
   background-color: #e9edc9;
   margin-top: 40px;
-  padding-left: 2px;
 }
 .content__description h2 {
   display: none;
@@ -364,7 +365,6 @@ h6 {
     align-items: center;
   }
   .content__img {
-    border-radius: 10px;
     height: 80vh;
     width: calc(40% - 20px);
   }
@@ -374,7 +374,7 @@ h6 {
     flex-direction: column;
     margin-left: 100px;
     width: 100%;
-    max-height: 60%;
+    max-height: 65%;
     font-size: 1.5rem;
   }
   .content__description h2 {
@@ -411,6 +411,7 @@ h6 {
     width: 104.5%;
     flex-direction: row-reverse;
     justify-content: space-between;
+    height: 80px;
     padding: 60px;
   }
 }
